Unit07/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.hellocluster.com
      http:
        paths:
          - backend:
              service:
                name: hello-nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
